--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,40 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+#Visual Studio
 x64/
 Debug/
+
+#gitignore c++
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
